Fix too wide phone view

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,7 @@ body {
 
 @media only screen and (max-device-width: 720px) {
     body {
-        width: 100%;
-        padding: 0 10px;
+        width: 95%;
     }
 }
 
